Bug 74771 - LibreOffice image captions crash MS Office Word
Summary: LibreOffice image captions crash MS Office Word
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium critical
Assignee: Tushar Bende
URL:
Whiteboard: target:4.3.0
Keywords:
: 81056 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-02-10 06:28 UTC by Tushar Bende
Modified: 2014-12-20 14:26 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
File for which this issue can be reproduced (835.33 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-02-10 06:44 UTC, Tushar Bende
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tushar Bende 2014-02-10 06:28:39 UTC
Reproduction:
Add an image and caption to a DOCX file in LibreOffice.
Attempt to open the DOCX file in Word. Word will crash.
Sample file is attached.
Comment 1 Tushar Bende 2014-02-10 06:44:59 UTC
Created attachment 93742 [details]
File for which this issue can be reproduced
Comment 2 Tushar Bende 2014-02-26 10:32:00 UTC
code changes pushed for review 

https://gerrit.libreoffice.org/#/c/8354
Comment 3 Commit Notification 2014-02-26 12:27:00 UTC
Tushar Bende committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7e92d9881f039899262882633712ec0a3de01474

fdo#74771 : LibreOffice image captions crash MS Office Word



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Tamás Zolnai 2014-12-20 14:26:31 UTC
*** Bug 81056 has been marked as a duplicate of this bug. ***