fdo#74771 : LibreOffice image captions crash MS Office Word

There was a problem if
    1)Document is created in MS word
    2)then opened in Libreoffice and edited by adding Image and Caption
    3)saved back to docx format
    4)Attempt to open the DOCX file in Word. Word was crashing.

    Problem was if any doc is edited in LO by adding image and Caption LO adds image as anchored inside TextBox.
    Which MS word doesn't support(Anchored image inside TextBox).
    Verified code changes on both MSWord2007 & MSWord2010 as it was crashing both earlier.

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx
Reviewed on:
	https://gerrit.libreoffice.org/8354

Change-Id: I621d0c5e3acbf9e1fc8514aa70110aa863748ceb